--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.23.5",
+    "@clerk/nextjs": "^5.2.2",
     "@clerk/themes": "^1.7.5",
     "@hookform/resolvers": "^3.3.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/themes": "^2.0.0-rc.3",
-    "@types/node": "20.6.2",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^20.6.2",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.6.0",
@@ -23,8 +24,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.279.0",
-    "mongoose": "^7.5.2",
-    "next": "13.4.19",
+    "mongoose": "^7.7.0",
+    "next": "^14.2.4",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,7 +34,7 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
+    "typescript": "^5.2.2",
     "uploadthing": "^5.6.0",
     "zod": "^3.22.2"
   }
